# intro-with-prefect-python-data-pipeline

./: README.md  pyproject.toml
src/pipeline/: main.py
src/test/: task.py
